# ba_observability-client

./: .gitignore  README.md  pyproject.toml
examples/: fastapi_httpx_forwarding.py  helper_script.py  minimal_script.py  multi_agent_demo.py  observability_logger.py  python_observability.py
observability_client/: __init__.py  client.py
tests/: conftest.py  test_bind.py  test_config.py  test_lifecycle.py  test_loki.py  test_metrics.py  test_tracing.py
