[project]
name = "ba-observability-client"        
version = "0.1.1"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=3.11.1",
    "opentelemetry-distro>=0.62b1",
    "opentelemetry-exporter-otlp>=1.41.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["observability_client"]
