[project]
name = "ba-observability-client"        
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mlflow>=3.11.1",
    "opentelemetry-distro>=0.62b1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-httpx==0.62b1",
    "opentelemetry-instrumentation-fastapi==0.62b1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["observability_client"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
